--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
     <div class="wrapper">
         <aside class="sidebar">
-           <!--  <div class="sidebar__image">
+            <div class="sidebar__image">
                 <img src="img/photo.jpg" alt="Photo">
-            </div> -->
+            </div>
             <div class="column">
                 <span class="column__title">Contacts</span>
                 <ul class="list">
