--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </aside>
         <div class="content">
             <h1 class="title">Yuliia Hirniak</h1>
-            <h2 class="title">QA engineerr</h2>
+            <h2 class="title">QA engineer</h2>
             <div class="block">
                 <h2 class="block__title">Summary</h2>
                 <p>
