--- a/index.html
+++ b/index.html
@@ -46,16 +46,10 @@
                 </ul>
             </div>
             <div class="column">
-                <span class="column__title">Languages</span>
+                <span class="column__title">Language</span>
                 <ul class="list">
                     <li class="list__item">
                         English (Upper-intermediate)
-                    </li>
-                    <li class="list__item">
-                        Ukrainian (Native)
-                    </li>
-                    <li class="list__item">
-                        Russian (Fluent)
                     </li>
                 </ul>
             </div>
@@ -93,7 +87,7 @@
             </div>
             <div class="block">
                 <h2 class="block__title">Experience</h2>
-                <h3 class="block__subtitle">Mate academy<span class="m-accent"> QA engineer</span></h3>
+                <h3 class="block__subtitle">QA engineer</h3>
                 <br>
                 <div class="block__item">
                     <span class="block__item-title">Project:</span>
