delete date and photo

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
     <div class="wrapper">
         <aside class="sidebar">
-            <div class="sidebar__image">
+            <!-- <div class="sidebar__image">
                 <img src="img/photo.jpg" alt="Photo">
-            </div>
+            </div> -->
             <div class="column">
                 <span class="column__title">Contacts</span>
                 <ul class="list">
@@ -37,9 +37,6 @@
             <div class="column">
                 <span class="column__title">Personal</span>
                 <ul class="list">
-                    <li class="list__item">
-                        <span class="m-accent">Date of birth:</span> 14.07.1995
-                    </li>
                     <li class="list__item">
                         <span class="m-accent">Address:</span> Ukraine, Lviv
                     </li>
